Added: add project and profile schema and create CURD api
