# src/router.ts
@@ -3,6 +3,8 @@ import userRoute from "./user/user.route";
 import educationRoute from "./education/education.route";
 import certificateRoute from "./certifications/certification.route";
 import experienceRoute from "./experience/experience.route";
+import projectRoute from "./project/project.route";
+import profileRoute from "./profile/profile.route";
 
 const router = Router();
 
@@ -21,5 +23,7 @@ router.use("/user", userRoute);
 router.use("/education", educationRoute);
 router.use("/certificate", certificateRoute);
 router.use("/experience", experienceRoute);
+router.use("/project", projectRoute);
+router.use("/profile", profileRoute);
 
 export default router;
